--- a/popup.html
+++ b/popup.html
@@ -646,7 +646,7 @@ var Renderer = {
   geoImage: function (aElement, lat, long, name) {
     var lat = lat.toFixed(6).toString().replace(".", "");
     var long = long.toFixed(6).toString().replace(".", "");
-    var url = 'http://maps.google.com/mapdata?cc=JP&min_priority=1&w=160&h=160&latitude_e6=' + lat + '&longitude_e6=' + long + '&zm=2000&Point=b&Point.latitude_e6=' + lat + '&Point.longitude_e6=' + long + '&Point.iconid=33&Point=e';
+    var url = 'http://maps.google.com/mapdata?cc=EN&min_priority=1&w=160&h=160&latitude_e6=' + lat + '&longitude_e6=' + long + '&zm=2000&Point=b&Point.latitude_e6=' + lat + '&Point.longitude_e6=' + long + '&Point.iconid=33&Point=e';
     $(aElement).tipsy({
       title: function() {
         return '<img src="img/loading.gif" /> Loading map...';
