Remembering users to use the right-click context menu.

--- a/options.html
+++ b/options.html
@@ -487,6 +487,10 @@ function updatePredictedHitsCount() {
         <td>-</td>
       </tr>
     </table>
+    <p class="notice" style="color: black;">
+      * Hey, now you can use the right-click context menu to change most of this settings directly into the popup window. Just get
+      out of here! :)
+    </p>
   </fieldset>
 
   <fieldset>
