Remove unnecessary setTimeout()

--- a/popup.html
+++ b/popup.html
@@ -1386,7 +1386,7 @@ function showRateLimit() {
     $("#twitter_hits_reset").text(leftMins + " mins to reset");
 
   }
-  setTimeout(showRateLimit, 60);
+  // setTimeout(showRateLimit, 60);
 }
 
 function newTweetsAvailable(count, unreadCount, timelineId) {
