Adding option to show API hits stats inside popup's window.

--- a/options.html
+++ b/options.html
@@ -304,8 +304,9 @@ function updatePredictedHitsCount() {
     <label for="show_expanded_urls">Expand shortened URLs:</label>
     <input type="checkbox" id="show_expanded_urls" name="show_expanded_urls" /><br>
     <label for="reply_all">Reply to all mentioned:</label>
-    <input type="checkbox" style="margin-bottom: 7px;" id="reply_all" name="reply_all" />
-    <br />
+    <input type="checkbox" id="reply_all" name="reply_all" /><br/>
+    <label for="show_hits_in_popup">Show API hits count:</label>
+    <input type="checkbox" style="margin-bottom: 7px;" id="show_hits_in_popup" name="show_hits_in_popup" /><br/>
 
     <label>Icon color:</label>
     <canvas name="idle_color" width="19" height="19" class="color_selector" must_restart></canvas><br/>
