--- a/popup.html
+++ b/popup.html
@@ -896,8 +896,11 @@ var Renderer = {
       str += '<img class="profile" src="' + user.profile_image_url + '" onclick="Renderer.handleUserClick(\'' + user.screen_name + '\', \'' + TwitterLib.URLS.BASE + user.screen_name + '\')"></img>';
     }
     str += '<a href="#" class="user" screen_name="' + user.screen_name + '" onclick="Renderer.handleUserClick(\'' + user.screen_name + '\', \'' + TwitterLib.URLS.BASE + user.screen_name + '\')" title="' + tweetTitleUserName + '">' + tweetUserName + '</a>';
-    if (user.verified == true) {
-      str += " <img class=\"verified\" src=\"http://a2.twimg.com/a/1272324988/images/verified/verified.png\" alt=\"verified\" />";
+    if(user.verified) {
+      str += ' <img class="verified" src="img/verified.png" alt="verified" />';
+    }
+    if(user.protected) {
+      str += ' <img class="protected" src="img/lock.png" alt="protected" />';
     }
 
     str += '<div class="text">';
@@ -949,12 +952,14 @@ var Renderer = {
       if(tweetManager.isRetweet(tweet.id)) {
         //TODO: undo retweet
       } else {
-        if(templateId != TimelineTemplate.DMS) {
+        if(templateId != TimelineTemplate.DMS && !user.protected) {
           str += '<img src="img/rt.png" title="Retweet" onclick="Composer.retweet(this.parentNode.parentNode.parentNode)"></img><br>';
           str += '<div class="rt_confirm">Retweet this message: <a href="javascript:Composer.confirmRT();">Yes</a> <a href="javascript:Composer.denyRT();">No</a></div>';
         }
       }
-      str += '<img src="img/share.png" title="Share (old school RT)" onclick="Composer.share(this.parentNode.parentNode.parentNode)"></img><br>';
+      if(!user.protected) {
+        str += '<img src="img/share.png" title="Share (old school RT)" onclick="Composer.share(this.parentNode.parentNode.parentNode)"></img><br>';
+      }
     }
     str += '</div>';
     str += '<div style="clear: both;"></div>';
