--- a/popup.html
+++ b/popup.html
@@ -1369,20 +1369,34 @@ var TimelineTab = {
 };
 
 var Autocomplete = {
+  startPosition: 0,
+
   init: function() {
+    var autocompleteElement = null;
     $("#compose_tweet_area textarea").autocomplete({
       source: function(request, response) {
         response(Autocomplete.autocomplete(request.term));
       },
-      focus: function() {
-        // prevent value inserted on focus
+      focus: function(event, ui) {
+        var oldLen = this.value.length;
+        this.value = this.value.substring(0, Autocomplete.startPosition) + ui.item.value;
+        this.setSelectionRange(oldLen, this.value.length);
         return false;
       },
       select: function(event, ui) {
-        this.value = this.value + ui.item.value + ' ';
+        this.value = this.value.substring(0, Autocomplete.startPosition) + ui.item.value + ' ';
+        var valueLen = this.value.length;
+        this.setSelectionRange(valueLen, valueLen);
         return false;
+      },
+      open: function(event, ui) {
+        autocompleteElement.menu.element.css({
+          overflow: 'auto',
+          maxHeight: '200px'
+        });
       }
     });
+    autocompleteElement = $("#compose_tweet_area textarea").data("autocomplete");
   },
 
   autocomplete: function(hintStr) {
@@ -1392,16 +1406,17 @@ var Autocomplete = {
     }
     var lastSpaceIdx = hintStr.lastIndexOf(' ');
     if(hintStr.substr(lastSpaceIdx + 1, 1) == '@') {
-      hintStr = hintStr.substr(lastSpaceIdx + 2);
+      this.startPosition = lastSpaceIdx + 2;
     } else if(lastSpaceIdx == 1 && hintStr.substr(0, 1) == 'd') {
-      hintStr = hintStr.substr(2);
+      this.startPosition = 2;
     } else {
       return [];
     }
+    hintStr = hintStr.substr(this.startPosition);
     var validScreenNames = [];
     for(var i = 0, len = usersList.length; i < len; ++i) {
       var user = usersList[i];
-      if(user.screen_name.match(hintStr)) {
+      if(user.screen_name.indexOf(hintStr) == 0) {
         validScreenNames.push(user.screen_name);
       }
     }
