--- a/background.html
+++ b/background.html
@@ -938,9 +938,24 @@ function checkVersionChanges(manifest) {
       if(compareVersions(storageVersion, [1, 8, 0]) <= 0) {
         var requestTimeout = OptionsBackend.get('request_timeout');
         if(requestTimeout == 6000) {
+          // Twitter itself recomends a bigger timeout value, so
+          // let's update the default value
           requestTimeout = OptionsBackend.defaultOptions['request_timeout'];
           OptionsBackend.saveOption('request_timeout', requestTimeout);
           initializeJQueryOptions();
+        }
+
+        var baseUrl = OptionsBackend.get('base_url');
+        var baseSigningUrl = OptionsBackend.get('base_signing_url');
+        if(baseUrl == baseSigningUrl && baseUrl == 'http://api.twitter.com/1/') {
+          // This days the SSL endpoint seems more reliable, let's make it the
+          // default one unless users have manually changed it.
+          baseUrl = OptionsBackend.defaultOptions['base_url'];
+          baseSigningUrl = OptionsBackend.defaultOptions['base_signing_url'];
+          OptionsBackend.saveOption('base_url', baseUrl);
+          OptionsBackend.saveOption('base_signing_url', baseSigningUrl);
+          TwitterLib.URLS.BASE = baseUrl;
+          TwitterLib.URLS.BASE_SIGNING = baseSigningUrl;
         }
       }
       storageData.save(JSON.stringify(currentVersion));
