--- a/options.html
+++ b/options.html
@@ -306,7 +306,9 @@ function updatePredictedHitsCount() {
     <label for="reply_all">Reply to all mentioned:</label>
     <input type="checkbox" id="reply_all" name="reply_all" /><br/>
     <label for="show_hits_in_popup">Show API hits count:</label>
-    <input type="checkbox" style="margin-bottom: 7px;" id="show_hits_in_popup" name="show_hits_in_popup" /><br/>
+    <input type="checkbox" id="show_hits_in_popup" name="show_hits_in_popup" /><br/>
+    <label for="show_user_autocomplete">Autocomplete usernames:</label>
+    <input type="checkbox" style="margin-bottom: 7px;" id="show_user_autocomplete" name="show_user_autocomplete" /><br/>
 
     <label>Icon color:</label>
     <canvas name="idle_color" width="19" height="19" class="color_selector" must_restart></canvas><br/>
