--- a/options.html
+++ b/options.html
@@ -57,10 +57,18 @@ $(function() {
 
   var onShortenerChange = function() {
     var shortenerSelect = $("select[name='url_shortener']")[0]
-    if(shortenerSelect.value=='bitly' || shortenerSelect.value=='jmp' || shortenerSelect.value=='yourls') {
+    if(shortenerSelect.value=='bitly' || shortenerSelect.value=='jmp') {
       $("#shortener_opts").show();
-    } else {
+	  $("#yourls_opts").hide();
+    } 
+    else if(shortenerSelect.value=='yourls'){
+	  $("#shortener_opts").hide();  
+	  $("#yourls_opts").show();
+	}
+	else
+	{
       $("#shortener_opts").hide();
+	  $("#yourls_opts").hide();
     }
   };
   var onShortenerAcctClick = function() {
@@ -413,6 +421,12 @@ function updatePredictedHitsCount() {
       <label for="shortener_key">API Key:</label>
       <input type="text" name="shortener_key">
     </p>
+	<p id="yourls_opts">
+      <label for="shortener_yourls_service">Service URL:</label>
+      <input type="text" name="shortener_service_url"> (http://yoursite.com/yourls-api.php)<br>
+      <label for="shortener_key">Signature token:</label>
+      <input type="text" name="shortener_key">
+	</p>
     <label for="share_include_title">Include page title (sharing):</label>
     <input type="checkbox" name="share_include_title"><br>
   </fieldset>
