--- a/popup.html
+++ b/popup.html
@@ -62,7 +62,7 @@ if(shortener_acct) {
 }
 var reply_all = OptionsBackend.get('reply_all');
 var shortener = new Shortener(OptionsBackend.get('url_shortener'),
-  shortener_acct, shortener_login, shortener_key);
+  shortener_acct, shortener_login, shortener_key, OptionsBackend.get('shortener_service_url'));
 
 $.extend($.ui.tabs.prototype, {
   refreshPositions: function() {
