--- a/popup.html
+++ b/popup.html
@@ -53,6 +53,7 @@ $.ajaxSetup({
   timeout: OptionsBackend.get('request_timeout')
 });
 
+var url_shortener = OptionsBackend.get('url_shortener');
 var shortener_acct = OptionsBackend.get('shortener_acct');
 var shortener_login = null;
 var shortener_key = null;
@@ -60,9 +61,17 @@ if(shortener_acct) {
   shortener_login = OptionsBackend.get('shortener_login');
   shortener_key = OptionsBackend.get('shortener_key');
 }
+
+if (url_shortener == 'yourls'){
+  shortener_key = OptionsBackend.get('yourls_key');
+}
+
+console.warn("shortener key: " + shortener_key);
+
 var reply_all = OptionsBackend.get('reply_all');
-var shortener = new Shortener(OptionsBackend.get('url_shortener'),
-  shortener_acct, shortener_login, shortener_key, OptionsBackend.get('shortener_service_url'));
+var shortener = new Shortener(url_shortener, shortener_acct, 
+			      shortener_login, shortener_key, 
+			      OptionsBackend.get('shortener_service_url'));
 
 $.extend($.ui.tabs.prototype, {
   refreshPositions: function() {
