Fixing up and down keys not working inside the compose textarea.

--- a/popup.html
+++ b/popup.html
@@ -42,6 +42,7 @@ if(!twitterBackend.authenticated() && !twitterBackend.tokenRequested()) {
 
 <script type="text/javascript" src="lib/3rdparty/jquery.js"></script>
 <script type="text/javascript" src="lib/3rdparty/jquery-ui-custom.js"></script>
+<script type="text/javascript" src="lib/3rdparty/jquery.autocomplete.mod.js"></script>
 <script type='text/javascript' src='lib/3rdparty/jquery.tipsy.js'></script>
 <script type="text/javascript" src="lib/3rdparty/jquery.contextMenu.js"></script>
 
